update sampleIngest request body
