# core/api/serializers.py
@@ -5,12 +5,6 @@ from rest_framework import serializers
 import core.models
 
 
-class CreateMetadataValueSerializer(serializers.ModelSerializer):
-    class Meta:
-        model = core.models.MetadataValues
-        fields = "__all__"
-
-
 class SampleIngestSerializer(serializers.ModelSerializer):
     # Extra fields not in the Sample model but needed for lookups/forward-compat.
     schema_name = serializers.CharField(
@@ -22,12 +16,55 @@ class SampleIngestSerializer(serializers.ModelSerializer):
     authors = serializers.CharField(
         required=False, allow_blank=True, allow_null=True, write_only=True
     )
+    sequence_file_path_r1 = serializers.CharField(
+        required=False,
+        allow_blank=True,
+        allow_null=True,
+        source="r1_fastq_filepath",
+    )
+    sequence_file_path_r2 = serializers.CharField(
+        required=False,
+        allow_blank=True,
+        allow_null=True,
+        source="r2_fastq_filepath",
+    )
 
     class Meta:
         model = core.models.Sample
+        fields = [
+            "sample_unique_id",
+            "sequencing_sample_id",
+            "authors",
+            "collecting_institution",
+            "collecting_lab_sample_id",
+            "microbiology_lab_sample_id",
+            "submitting_lab_sample_id",
+            "schema_name",
+            "schema_version",
+            "sequencing_date",
+            "sequence_file_R1_md5",
+            "sequence_file_R2_md5",
+            "sequence_file_path_r1",
+            "sequence_file_path_r2",
+        ]
+
+
+class SampleIngestResponseSerializer(serializers.Serializer):
+    sample_unique_id = serializers.CharField()
+    sequencing_sample_id = serializers.CharField(allow_null=True, allow_blank=True)
+    created = serializers.BooleanField()
+
+
+class ErrorSerializer(serializers.Serializer):
+    error = serializers.CharField()
+
+
+#### Old serializers TODO: refactor or remove ####
+
+class CreateMetadataValueSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = core.models.MetadataValues
         fields = "__all__"
-
-
 class SampleStateHistorySerializer(serializers.ModelSerializer):
     class Meta:
         model = core.models.SampleStateHistory
